[FIX] mail: several slight messaging menu improvements
Before this commit, the Messaging Menu had the following issues:

- Header is too large;
- Header color in dark theme is too white;
- Important notifications (= needactions) are not highlighted enough
  compared to muted notifications;
- Notification body and title looked too alike;
  => title should be more visible than content
- Mouse-hovering on notification items breaks background-inherit
  style of avatar and IM status;
  => side-effect of `list-group-item-action`
- Desktop: Header items slightly move when changing selection;
  => comes from `fw-bolder`
- Desktop: mark as read button was too small and not visible enough;
- Mobile: too many borders, and they are too strong;
  => undesirable dropdown style
- Mobile: Messaging Menu had poor "New message" button link whereas
  Discuss app has nice "Start a conversation" button;
- Mobile: "Start a conversation" button is not shown on livechat tab;
- Mobile: when menu is open while Discuss app is open in background,
  it's unclear whether the messaging menu is open or not;
  => missing background highlight on Messaging Menu toggler
- Mobile: State of Mobile Discuss App was not synced properly when
  using Messaging Menu at the same time;
  => e.g. unselected tab
- Mobile: Discuss app and Messaging Menu were not properly aligned;
  => Messaging Menu did not offset position based on systray navbar
  height
- Mobile: active navbar item was not highlighted enough, especially
  in white theme;
- "OdooBot has a suggestion" is shown on all tabs instead of only
  in "All" tab like "OdooBot has a request";

This commit fixes all the above issues.
Some styling issues were also affecting the Activity Menu, such as
borders and highlighted open state. This commit applies these
few improvements on the Activity Menu too.

X-original-commit: d68488db7dfae489444d03b663425e8421a01ab7

--- a/addons/mail/static/src/core/web/notification_item.scss
+++ b/addons/mail/static/src/core/web/notification_item.scss
@@ -1,12 +1,23 @@
+.o-mail-NotificationItem {
+    &.o-important {
+        background-color: mix($o-gray-100, $o-gray-200) !important;
+    }
+    &:hover {
+        background-color: $o-gray-200 !important;
+    }
+}
+
+
 .o-mail-NotificationItem-badge {
     padding: 3px 6px !important;
 }
 
 .o-mail-NotificationItem-markAsRead {
     background-color: transparent !important;
+    font-size: 0.85rem !important;
+    color: $success !important;
 
     &:hover {
-        color: $success !important;
         background-color: rgba(0, 0, 0, 0.075) !important;
     }
 }
